--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,7 @@
 ---
 before_install:
   - sudo apt-get install aspell
+  - cpanm --local-lib=~/perl5 local::lib && eval $(perl -I ~/perl5/lib/perl5/ -Mlocal::lib)
   - cpanm Module::Install
   - cpanm Module::Install::AuthorRequires
   - cpanm Module::Install::AuthorTests
