--- a/.travis.yml
+++ b/.travis.yml
@@ -1,17 +1,18 @@
 ---
 before_install:
   - sudo apt-get install aspell
-  - cpanm --local-lib=~/perl5 local::lib && eval $(perl -I ~/perl5/lib/perl5/ -Mlocal::lib)
-  - cpanm Module::Install
-  - cpanm Module::Install::AuthorRequires
-  - cpanm Module::Install::AuthorTests
-  - cpanm Module::Install::Authority
-  - cpanm Test::Pod
-  - cpanm Test::NoTabs
-  - cpanm Test::Pod::Coverage
-  - cpanm Pod::Coverage
-  - cpanm Pod::Coverage::TrustPod
-  - cpanm Test::Spelling
+  - cpanm --local-lib=~/perl5 local::lib || cat ~/.cpanm/build.log
+  - eval $(perl -I ~/perl5/lib/perl5/ -Mlocal::lib)
+  - cpanm Module::Install || cat ~/.cpanm/build.log
+  - cpanm Module::Install::AuthorRequires || cat ~/.cpanm/build.log
+  - cpanm Module::Install::AuthorTests || cat ~/.cpanm/build.log
+  - cpanm Module::Install::Authority || cat ~/.cpanm/build.log
+  - cpanm Test::Pod || cat ~/.cpanm/build.log
+  - cpanm Test::NoTabs || cat ~/.cpanm/build.log
+  - cpanm Test::Pod::Coverage || cat ~/.cpanm/build.log
+  - cpanm Pod::Coverage || cat ~/.cpanm/build.log
+  - cpanm Pod::Coverage::TrustPod || cat ~/.cpanm/build.log
+  - cpanm Test::Spelling || cat ~/.cpanm/build.log
 language: perl
 notifications:
   irc: irc.perl.org#message-passing
